<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nepal.adversify.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_manageFragment"
            app:destination="@id/manageFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
    </fragment>

    <fragment
        android:id="@+id/manageFragment"
        android:name="com.nepal.adversify.ui.manage.ManageFragment"
        android:label="@string/title_manage"
        tools:layout="@layout/fragment_manage" />

    <fragment
        android:id="@+id/updateFragment"
        android:name="com.nepal.adversify.ui.manage.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/content_fragment_update" />
</navigation>
