<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.manage.UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_basic_info" />

        <include layout="@layout/view_highlight_1" />

        <!-- Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Address Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_address"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Contact number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_conatct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_contact"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Website Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_website"
                android:inputType="textWebEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:gravity="center_vertical"
            android:padding="@dimen/four_dp">

            <TextView
                android:id="@+id/title_image_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/four_dp"
                android:layout_weight="1"
                android:alpha="0.8"
                android:text="@string/title_image"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/image_picker_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_preview"
                    android:layout_width="@dimen/image_medium"
                    android:layout_height="@dimen/image_medium"
                    android:layout_toEndOf="@+id/image_picker_button"
                    android:scaleType="centerInside"
                    android:visibility="invisible"
                    tools:srcCompat="@drawable/dummy_merchant_preview" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/image_clear_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="@dimen/space3x"
                    android:layout_height="@dimen/space3x"
                    android:layout_alignTop="@+id/image_preview"
                    android:layout_marginStart="-8dp"
                    android:layout_toEndOf="@+id/image_preview"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_cancel_black_24dp" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_description" />

        <include layout="@layout/view_highlight_1" />

        <!-- Description Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_description"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_opening_hour_info" />

        <include layout="@layout/view_highlight_1" />

        <!-- Sunday Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_sunday"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Monday Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_monday"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tuesday Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_tuesday"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Wednesday Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_wednesday"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Thursday Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_thursday"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Friday Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_friday"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Saturday Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_saturday"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_discount_info" />

        <include layout="@layout/view_highlight_1" />

        <!-- Discount title Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_discount_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_title"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Discount description Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_discount_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_description"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_offer_info" />

        <include layout="@layout/view_highlight_1" />

        <!-- Deals title Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_offer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_title"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Offer description Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_offer_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_description"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Update Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:text="@string/value_update"
            app:icon="@drawable/ic_edit_black_24dp"
            app:iconGravity="textStart" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>