<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/layout_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/status_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image2x"
                android:background="@drawable/banner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/semitransparent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/space">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/status_text"
                        style="@style/AppTheme.Text.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space"
                        android:text="@string/title_not_advertised"
                        android:textColor="@color/white"
                        app:chipBackgroundColor="@color/cadet_blue"
                        tools:text="Not Advertised!" />

                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:text="@string/title_connected_clients"
                    tools:text="Connected Clients" />

                <include layout="@layout/view_highlight_1" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_connected_client">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    style="@style/AppTheme.Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:text="@string/title_latest_reviews"
                    tools:text="Latest Reviews" />

                <include layout="@layout/view_highlight_1" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/review_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_review" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/advertiseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/status_container"
        app:layout_anchorGravity="bottom|start"
        app:srcCompat="@drawable/ic_wifi_tethering_black_24dp"
        app:tint="@color/white"
        app:useCompatPadding="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/manageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/green"
        app:srcCompat="@drawable/ic_edit_black_24dp"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>